fixed column issue and date alignment issue

--- a/src/blocks/post/style.scss
+++ b/src/blocks/post/style.scss
@@ -60,7 +60,7 @@
 		width: inherit;
 		height: inherit;
 		margin-right: 4px;
-		vertical-align: middle;
+		vertical-align: bottom;
 	}
 
 	.uagb-post__columns-8 article {
